# Lilac

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: app.rs  main.rs
src/guards/: github.rs
src/webhook/: issues.rs
