[package]
name = "lilac"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
octocrab = "0.39.0"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
regex = "1.10.6"
url = "2.5.2"
jsonwebtoken = "9.3.0"
